Changes on HTML Pages & CSS Change Background Color

--- a/contact.html
+++ b/contact.html
@@ -1,19 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
+      crossorigin="anonymous"
+    />
     <title>contact</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="contact">
-          <h1 class="main-header">☎ Contact us</h1> 
-  <a class="email" href="mailto: samira_aghajani66@yahoo.com">✉ Send Email to me </a> 
+      <h1 class="main-header">☎ Contact us</h1>
+      <a
+        class="email"
+        href="mailto: samira_aghajani66@yahoo.com"
+        target="_blank"
+        >✉ Send Email to me
+      </a>
     </div>
-    <br><br>
-     <a class="back-home" href="/">Back to Home</a>
-</body>
+    <br /><br />
+    <a class="back-home" href="/">Back to Home</a>
+  </body>
 </html>
