--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <h1 class="main-header">🥐Croissant Lover</h1>
     <h3 class="secondary-header">This is a Community for Croissant lovers</h3>
     <div class="container">
-      <a href="/images.html">See Images</a>
-      <a href="/contact.html">Contact us</a>
+      <a href="/images.html" target="_blank">See Images</a>
+      <a href="/contact.html" target="_blank">Contact us</a>
     </div>
   </body>
 </html>
