--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <title>Croissant</title>
+    <title>HOME |Croissant.com</title>
   </head>
   <body>
     <h1 class="main-header">🥐Croissant Lover</h1>
