--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
       integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT"
       crossorigin="anonymous"
     />
-    <title>contact</title>
+    <title>Contact| Croissant.com</title>
   </head>
   <body>
     <div class="contact">
