--- a/images.html
+++ b/images.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Images from our Croissants will encourage you to taste them and realize how they are tasty and delicious.">
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -17,9 +18,9 @@
     <h1 class="main-header">🖼 Images</h1>
     <div class="container">
       <div class="row">
-        <div class="col-md-4"><img src="images/2.jpg" alt="" /></div>
-        <div class="col-md-4"><img src="images/3.webp" alt="" /></div>
-        <div class="col-md-4"><img src="images/4.jpg" alt="" /></div>
+        <div class="col-md-4"><img src="images/2.jpg" alt="Croissants" /></div>
+        <div class="col-md-4"><img src="images/3.webp" alt="Crossorigin with Bacon" /></div>
+        <div class="col-md-4"><img src="images/4.jpg" alt="Croissant with cream & Jar" /></div>
       </div>
     </div>
     <br /><br />
